--- a/VLDBJ/deleteEdge.tex
+++ b/VLDBJ/deleteEdge.tex
@@ -3,16 +3,13 @@
 
 Similar to the edge insertion, deleting an edge may trigger the updates of CL-tree nodes as well as their structures. We illustrate this by Example~\ref{ep:deleteExample}.
 
-%Similar to the edge insertion, deleting an edge affects the connectivity and the core number of vertices in $G$. We illustrate this by Example~\ref{ep:deleteExample}.
-
 \begin{example}
 \label{ep:deleteExample}
-Consider the graph in Figure~\ref{fig:connectivity}, if we delete an edge ($H$, $G$) as shown in Figure~\ref{fig:advancedIndex}, the core number of vertex $H$ decreases to 1. We need to create a new node whose core number is 1 in upper level and then move up $H$ to the new node. If we delete an edge ($G$, $I$), the connectivity of some vertices changes as shown in Figure~\ref{fig:advancedIndex} and thus the corresponding subtree is split to two new ones. 
+Consider the graph in Figure~\ref{fig:connectivity}. If we delete an edge ($H$, $G$) of the graph in Figure~\ref{fig:advancedIndex}, the core number of vertex $H$ decreases to 1. Thus we need to create a new node with core number being 1 and then move $H$ up to the new node. If we delete an edge ($G$, $I$), the connectivity of some vertices changes as shown in Figure~\ref{fig:advancedIndex} and thus the corresponding subtree has to be split to two new ones.
 \end{example}
 To maintain the CL-tree for deleting an edge, we propose an algorithm called {\tt deleteEdge}.
-%which works in an inverse way of {\tt insertEdge} .
 Let $V^-$ be the set of vertices whose core numbers decrease after deleting an edge ($u$, $v$).
-The main steps of {\tt deleteEdge} are as follows. 
+We summarize the main steps of {\tt deleteEdge} as follows.
 
 $\bullet$ \textbf{Step 1:} Compute $V^-$;
 
@@ -23,54 +20,76 @@ $\bullet$ \textbf{Step 3:} Move up vertices of $V^-$.
 We now elaborate these steps one by one.
 
 \textbf{Step 1: Compute $V^-$.}
-By Lemma~\ref{lm:kcorelemma}, the core numbers of vertices in $G$ decrease by at most 1 after deleting an edge. We first compute $V^-$.
+By Lemma~\ref{lm:kcorelemma}, the core numbers of vertices in $G$ decrease by at most 1 after deleting an edge.
+We compute $V^-$ using the algorithm in~\cite{kcoreUpdate}.
 
 \textbf{Step 2: Split the subtree.}
-Different from the edge insertion, the conncetivity of vertices is unknown after deleting an edge. We illustrate this by Example~\ref{ep:delete}. 
-
-%As a result of the edge deletion, the connectivity of vertices affects the structure of the CL-tree index, however, can not be updated by the similar way introduced in edge insertion case. Different from edge insertion, the conncetivity is unknown after deleting an edge. We illustrate it in Exmaple~\ref{ep:delete}.
+Similar to edge insertion, the connectivity of vertices may change after deleting an edge. We illustrate this by Example~\ref{ep:delete}. 
 
 \begin{example}
 \label{ep:delete}
-Figure~\ref{fig:splitExmp} presents two 2-$\widehat{core}$s. After deleting an edge ($u,v$), the graph in Figure~\ref{fig:split1} is still a 2-$\widehat{core}$, however, the graph in Figure~\ref{fig:split2} is split to two disconnected 2-$\widehat{core}$s. 
-%The connectivity of $u$, $v$ changes and they are no longer connected in one 2-$\widehat{core}$.
+Figure~\ref{fig:splitExmp} presents two 2-$\widehat{core}$s. After deleting an edge ($u,v$), the graph in Figure~\ref{fig:split1} is still a 2-$\widehat{core}$; however, the graph in Figure~\ref{fig:split2} is split to two disconnected 2-$\widehat{core}$s.
 \end{example}
 
 \begin{figure}[ht]
     \centering
     \mbox{
         \subfigure[]{
-            \includegraphics[width=.355\columnwidth]{figures/splitExmp1}
+            \includegraphics[width=.335\columnwidth]{figures/splitExmp1}
             \label{fig:split1}
         }
         \hspace{2ex}
         \subfigure[]{
-            \includegraphics[width=.355\columnwidth]{figures/splitExmp2}
+            \includegraphics[width=.335\columnwidth]{figures/splitExmp2}
             \label{fig:split2}
         }
     }
-    \caption{Change in the core number and connectivity.}
+    \caption{The connectivity change.}
     \label{fig:splitExmp}
 \end{figure}
 
-Inspired by the Example~\ref{ep:delete}, we need to reorganize vertices in the node after deleting an edge. Moreover, if this node is split to 2 nodes, the father node of this node is also possible to be split because of the new child node. Thus we need to split the subtree level by level until no node needs to be split. 
-Let the tree node be $p$ which $u$ and $v$ belong to. We first give an observation: If $p$ is a leaf node, vetices in $p$ form a $k$-$\widehat{core}$. If $p$ is a non-leaf node, vertices in $p$ are not necessarily connected from each other. See Figure~\ref{fig:cktree}, vertices $F, G$ in $r_1$ are not directly connected because the CL-tree is compressed.
-%Based on the observation, we can reorganize vertices in $p$ with the help of $p$'s child nodes. 
-Based on the observation, we summarize that vertices which form a tree node should satisfy the following conditions:
+Inspired by Example~\ref{ep:delete}, we need to reorganize the subgraph and determine whether the subtree will be split after deleting the edge ($u, v$). Instead of rebuilding the subtree, here we dynamically update the subtree in a bottom-up manner starting from the node $p$ ($p.getCore$ = min\{$core_G[u], core_G[v]$\}). We first introduce a vertex-tree map. The key of this map is a vertex, and corresponding value is the root node of one subtree. We illustrate the map in Example~\ref{em:reorganize}. 
 
-$\bullet$ Vertices in a connected component.
 
-$\bullet$ Vertices share the same child node.
+%Moreover, if this node is split to two nodes, the father node of this node is also possible to be split because of the new child node. Thus we need to split the subtree level by level until no node needs to be split.
+%Let the tree node be $p$ which $u$ and $v$ belong to.
+%We first give an observation: If $p$ is a leaf node, vertices in $p$ form a $k$-$\widehat{core}$. If $p$ is a non-leaf node, vertices in $p$ are not necessarily connected from each other. See Figure~\ref{fig:cktree}, vertices $F, G$ in $r_1$ are not directly connected because the CL-tree is compressed.
+%Based on the observation, we summarize that vertices which form a tree node should satisfy the following conditions:
+
+%$\bullet$ Vertices in a connected component.
+
+%$\bullet$ Vertices share the same child node.
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{figures/traceChild}
-    \caption{Trace the shared child node.}
+    \includegraphics[width=0.8\linewidth]{figures/traceChild}
+    \caption{The vertex-tree map.}
     \label{fig:trace}
 \end{figure}
 
-Here we build a vertex-node map to trace the shared child nodes. We use Figure~\ref{fig:trace} to illustrate the process. Let $y$ be a vertex in $p$, $w$ be $y$'s neighbor vertex whose core number is larger than $y$, and $p_w$ be the node that $w$ belongs to. The value of $w$ in this map is one tree node (call $q_1$). $q_1$ is the child node of $p$ and the ancestor of the node $p_w$. Thus, we can associate vertex $y$ with $q_1$. After recursively associating vertices in $p$ with $p$'s child nodes, we can then reorganize vertices in $p$ and determine whether $p$ will be split. Note that in step 2, the maximum number of nodes that $p$ may be split to is 2 (recall Lemma~\ref{lemma:relevantNode}). If $p$ is split to 2 nodes then we continue the process in $p.father$ until no node needs to be split. 
-%Note that we separate the node from the one whose has more vertices because it is more efficient. 
+
+\begin{example}
+\label{em:reorganize}
+Consider the subtree shown in Figure~\ref{fig:trace}, let $x,y$ denote two vertices of the node $p$, and $p_1,p_2$ are two child nodes of $p$. Vertex $w$ and $z$ are neighbors of $x$ and $y$ respectively and their core numbers are both larger than $x$'s and $y$'s. For $w$, we first locate $p_w$ that $w$ belongs to and trace up to find $p_1$ which is the ancestor node of $p_w$ as well as one child node of $p$. Thus the value of $w$ in this map is $p_1$. Similarly, $p_2$ is mapped to $z$.
+\end{example}
+After traversing the subtree and building the map, we can now reorganize vertices in $p$ by enumerating their neighbors. For instance, $p_1$ is now associated with $x$ because $x$ has a neighbor $w$. If $p_1$ is associate with another vertex in $p$, then we can group this vertex with $x$ in one vertex set because they are connected through some vertices of the subtree whose root is $p_1$. Note that if we find one of $x$'s neighbor vertices whose core number is equal to $x$'s, we can directly group it with $x$ because this vertex is definitely being in $p$ as well. 
+After reorganizing vertices in $p$, we can determine whether the node should be split. Note that the maximum number of nodes that $p$ may be split to is 2 (recall Lemma~\ref{lemma:relevantNode}), if vertices in $p$ are eventually grouped in two sets, then we split this node and repeat the process in $p.father$. 
+The terminating condition of spliting the subtree is all the vertices of $p$ are grouped in one set and all the child nodes of $p$ are shared by vertices in this set. We give Example~\ref{em:steps} to illustrate the process.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1\linewidth]{figures/steps}
+    \caption{The process of spliting the subtree.}
+    \label{fig:steps}
+\end{figure}
+
+\begin{example}
+\label{em:steps}
+Consider the original graph in Figure~\ref{fig:split2}, the process of spliting the subtree is shown in Figure~\ref{fig:steps}. After delete the edge ($G,I$), we first locate the node $p_3$ contains $G$, reorganize vertices of $p_3$ and find that $p_2$ is associate with no vertex of $p_3$. Although $p_3$ remains complete, we continue the process in $P_4$. Then, after reorganizing vertices in $p_4$, we split it to two nodes because $p_2$ and $p_3$ are respectively shared by vertices $H$ and $M$. Next, $p_5$ remains unaffected and all its child nodes are shared by $N$ in $p_5$. Finally we finish spliting the subtree.  
+\end{example}
+
+%If $p$ is split to 2 nodes then we continue the process in $p.father$ until no node needs to be split.
+%Note that we separate the node from the one whose has more vertices because it is more efficient.
 
 
 
