updates on deleteEdge.tex etc.

--- a/VLDBJ/deleteEdge.tex
+++ b/VLDBJ/deleteEdge.tex
@@ -72,7 +72,7 @@ Inspired by Example~\ref{ep:delete}, we need to reorganize the subgraph and dete
 \label{em:reorganize}
 Consider the subtree shown in Figure~\ref{fig:trace}, let $x,y$ denote two vertices of the node $p$, and $p_1,p_2$ are two child nodes of $p$. Vertex $w$ and $z$ are neighbors of $x$ and $y$ respectively and their core numbers are both larger than $x$'s and $y$'s. For $w$, we first locate $p_w$ that $w$ belongs to and trace up to find $p_1$ which is the ancestor node of $p_w$ as well as one child node of $p$. Thus the value of $w$ in this map is $p_1$. Similarly, $p_2$ is mapped to $z$.
 \end{example}
-After traversing the subtree and building the map, we can now reorganize vertices in $p$ by enumerating their neighbors. For instance, $p_1$ is now associated with $x$ because $x$ has a neighbor $w$. If $p_1$ is associate with another vertex in $p$, then we can group this vertex with $x$ in one vertex set because they are connected through some vertices of the subtree whose root is $p_1$. Note that if we find one of $x$'s neighbor vertices whose core number is equal to $x$'s, we can directly group it with $x$ because this vertex is definitely being in $p$ as well. 
+After traversing the subtree and building the map, we can now reorganize vertices in $p$ by enumerating their neighbors. For instance, $p_1$ is now associated with $x$ because $x$ has a neighbor $w$ and $p_2$ is associated with $y$. If $y$ has another neighbor vertex that maps $p_1$, which means $p_1$ is associated with both $x$ and $y$. Then we can group $x$ and $y$ in one vertex set because they are connected through some vertices of the subtree whose root is $p_1$, and further associate the set (containing $x$ and $y$) with $p_1$ and $p_2$. Note that if we find one of $x$'s neighbor vertices whose core number is equal to $x$'s, we can directly group it with $x$ together with their associated child nodes because this vertex is definitely being in $p$ as well. 
 After reorganizing vertices in $p$, we can determine whether the node should be split. Note that the maximum number of nodes that $p$ may be split to is 2 (recall Lemma~\ref{lemma:relevantNode}), if vertices in $p$ are eventually grouped in two sets, then we split this node and repeat the process in $p.father$. 
 The terminating condition of spliting the subtree is all the vertices of $p$ are grouped in one set and all the child nodes of $p$ are shared by vertices in this set. We give Example~\ref{em:steps} to illustrate the process.
 
